基于结构化的recipe对比